# kaizen

./: .gitignore  CMakeLists.txt  Communication.md  Contribution.md  CppProperties.json  Examples.md  LICENSE.txt  README.md  algorithms.h  internal.h  kaizen.cpp  kaizen.h.in  make_kaizen.py  masis.cpp  masis.h  runbuild_linx.sh  runbuild_win.bat  test_kaizen.cpp  test_kaizen.h  utils.h
.github/workflows/: cmake-multi-platform.yml  main-tests.yml
.metrics/: plot_loc.py  plot_loc.yml
containers/: array.h  list.h  vector.h
datas/: array.h  cloc.h  cmd_args.h  concepts.h  deque.h  filestring.h  forward_list.h  in.h  list.h  string.h  timer.h  type_traits.h  vector.h  version.h
functions/: utils.h
tests/: containers.h  test_array.h  test_cloc.h  test_cmd_args.h  test_containers.h  test_deque.h  test_deref.h  test_file.h  test_filestring.h  test_forward_list.h  test_ifile.h  test_in.h  test_list.h  test_map.h  test_perf.h  test_point.h  test_queue.h  test_set.h  test_stack.h  test_string.h  test_timer.h  test_uncompilable.h  test_unordered_map.h  test_unordered_set.h  test_utils.h  test_vector.h  test_version.h
zen/composites/: collections.h
zen/datas/: alpha.h  array.h  cloc.h  cmd_args.h  concepts.h  deque.h  deref.h  file.h  filestring.h  forward_list.h  ifile.h  in.h  list.h  map.h  point.h  queue.h  set.h  stack.h  string.h  timer.h  unordered_map.h  unordered_set.h  vector.h  version.h
zen/functions/: utils.h
